--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+# Configurações do DataSource para o MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/urubupix
+spring.datasource.username=root
+spring.datasource.password=lukita10
 
+# Configurações do Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
